# LLBot.CLI

./: Cargo.toml  README.md  build.rs  npm-publish.bat
.github/workflows/: release.yml
src/: main.rs  pmhq_client.rs  qrcode_display.rs  updater.rs
