[package]
name = "llbot-cli"
version = "1.3.2"
edition = "2021"
description = "LLBot CLI launcher"

[[bin]]
name = "llbot"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
base64 = "0.22"
ctrlc = "3"
command-group = "5"
flate2 = "1"
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
static_vcruntime = "2.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
